--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                 <ul>
                     <li><a href="#">My Work</a></li>
                     <li><a href="#">My Skills</a></li>
-                    <li><a href="#">Hire Me</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <div class="social-header">
             <ul>
-                <li><a href="#"><img src="images/interests.svg" alt="interests"></a></li>
+                <li><a href="#"><img src="images/brush.svg" alt="design"></a></li>
+                <li><a href="#"><img src="images/queue_music.svg" alt="special interests"></a></li>
                 <li><a href="#"><img src="images/share.svg" alt="share"></a></li>
-                <li><a href="#"><img src="images/hobbies.svg" alt="hobbies"></a></li>
             </ul>
         </div>
     </div>
@@ -66,10 +66,10 @@
                   <p class="subtitle">Featured Project</p>
                   <a href="#" class="featured-title" >Kit Builder ReDesign</a>
                
-                  <p class="featured-desc" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. At maxime iste nostrum dignissimos ex esse non repellat! Dolores, deleniti necessitatibus?</p>
+                  <p class="featured-desc" >Design and launch re-branding of Kit Builder. <br> Kit Builder is a SaaS platform specialising in advanced 3D customisation. An updated brand identity and new website was our priority.</p>
                 </div>
             </div>
-            <img class="right transition2" src="images/test-site-computer.png" alt="featured project">
+            <img class="right transition2" src="images/essential-kb-laptop.png" alt="featured project">
         </section>
 
         <section class="skills" >
@@ -77,24 +77,24 @@
                 <ul>
                     <li class="transition2">
                         <div class="icon-container one">
-                            <img src="images/share.svg" alt="UI/UX Icon" >
+                            <img src="images/ux-ui-icon.svg" alt="UI/UX Icon" >
                         </div>
                         <p class="skill-title">UI/UX Design</p>
-                        <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nostrum!</p>
+                        <p class="featured-desc skill-desc">I can combine graphics, interaction motion & branding design into attractive interfaces</p>
                     </li>
                     <li class="transition2">
                         <div class="icon-container two">
-                            <img src="images/share.svg" alt="FrontEnd Icon" >
+                            <img src="images/coding-icon.svg" alt="Front-end Icon" >
                         </div>
-                        <p class="skill-title">FrontEnd Development</p>
-                        <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nostrum!</p>
+                        <p class="skill-title">Front-end Development</p>
+                        <p class="featured-desc skill-desc">My knowledge of HTML & CSS allows me to communicate visions and ideas easily across teams</p>
                     </li>
                     <li class="transition2">
                         <div class="icon-container three">
-                            <img src="images/share.svg" alt="Logo Identity" >
+                            <img src="images/branding-icon.svg" alt="Logo Identity" >
                         </div>
                         <p class="skill-title">Identity Design</p>
-                        <p class="featured-desc skill-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, nostrum!</p>
+                        <p class="featured-desc skill-desc">I create logos, icons & graphics that marry colour palette and typography to produce brand style and guidelines</p>
                     </li>
                 </ul>
             </div>
@@ -105,12 +105,12 @@
             <div class="portfolio-container transition3">
                 <div class="portfolio-left">
                     <div class="inner">
-                        <p class="subtitle">Guitar App</p>
-                        <p class="featured-title" >Fretastic.com</p>
-                        <p class="feautred-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, vero?</p>
+                        <p class="subtitle">UI/UX Design</p>
+                        <p class="featured-title" >Kit Builder Admin Interface</p>
+                        <p class="feautred-desc">An exciting current project, <br> Merging new ideas with user feedback and re-developing Kit Builder 3D customisation process: <br>Adobe Illustrator to draw image mockups, <br> UXPin Merge to develop and streamline component creation, <br>Figma to create user-flow systems.</p>
                     </div>
                 </div>
-                <a href="#"> <img src="images/test-site-computer.png" alt="Test Computer"></a>
+                <a href="#"> <img src="images/UXUIiconimage.jpg" alt="Mock UI image"></a>
             </div>
 
             <div class="portfolio-container transition3">
