commit sunday change

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     
     <div class="nav-container">
         <header>
-            <a href="index.html" class="logo"> Emma Nia Willmore</a>
+            <a href="index.html" class="logo">Emma Nia Willmore</a>
 
             <nav>
                 <ul>
-                    <li><a href="#"> My Work</a></li>
-                    <li><a href="#"> My Skills</a></li>
-                    <li><a href="#"> Contact</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -32,10 +32,10 @@
 
     <div class="hero">
         <div class="content">
-            <h1 class="stagger1"> Crafted Design Experiences</h1>
+            <h1 class="stagger1">Crafted Web & Print Design</h1>
             <div class="meet stagger1">
                 <span>&darr;</span>
-                <p> Meet Emma Nia</p>
+                <p>Meet Emma Nia</p>
 
             </div>
             <svg class="scroll stagger1" width="51" height="90" viewBox="0 0 51 90" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -66,7 +66,7 @@
                   <p class="subtitle">Featured Project</p>
                   <a href="#" class="featured-title" >Kit Builder ReDesign</a>
                
-                  <p class="featured-desc" > Design and launch re-branding of Kit Builder. <br> Kit Builder is a SaaS platform specialising in advanced 3D customisation. An updated brand identity and new website was our priority.</p>
+                  <p class="featured-desc" >Kit Builder web and print re-design and launch<br> Kit Builder is a SaaS platform specialising in advanced 3D customisation. Updating brand identity and creating a new website.</p>
                 </div>
             </div>
             <img class="right transition2" src="images/essential-kb-laptop.png" alt="featured project">
@@ -80,13 +80,13 @@
                             <img src="images/ux-ui-icon.svg" alt="UI/UX Icon" >
                         </div>
                         <p class="skill-title">UI/UX Design</p>
-                        <p class="featured-desc skill-desc">I can combine graphics, interaction motion & branding design into attractive interfaces</p>
+                        <p class="featured-desc skill-desc">I combine graphics, logic, interaction motion & branding design into attractive interfaces</p>
                     </li>
                     <li class="transition2">
                         <div class="icon-container two">
                             <img src="images/coding-icon.svg" alt="Front-end Icon" >
                         </div>
-                        <p class="skill-title">Front-end Development</p>
+                        <p class="skill-title">Front-End Dev</p>
                         <p class="featured-desc skill-desc">My knowledge of HTML & CSS allows me to communicate visions and ideas easily across teams</p>
                     </li>
                     <li class="transition2">
@@ -94,7 +94,7 @@
                             <img src="images/branding-icon.svg" alt="Logo Identity" >
                         </div>
                         <p class="skill-title">Identity Design</p>
-                        <p class="featured-desc skill-desc">I create logos, icons & graphics that marry colour palette and typography to produce brand style and guidelines</p>
+                        <p class="featured-desc skill-desc">Creating logos, icons & graphics with colour palette and typography options to produce brand style and guidelines</p>
                     </li>
                 </ul>
             </div>
@@ -107,7 +107,7 @@
                     <div class="inner">
                         <p class="subtitle">UI/UX Design</p>
                         <p class="featured-title" >Kit Builder Admin Interface</p>
-                        <p class="feautred-desc">An exciting current project, <br> Merging new ideas with user feedback and re-developing Kit Builder 3D customisation process: <br>Adobe Illustrator to draw image mockups, <br> UXPin Merge to develop and streamline component creation, <br>Figma to create user-flow systems.</p>
+                        <p class="feautred-desc">An exciting current project, <br> Merging new ideas with user feedback to re-develop Kit Builder 3D customisation process: <br>Adobe Illustrator to draft idea mockups, <br> UXPin Merge to develop and streamline component creation, <br>Figma to moodboard user-flow systems.</p>
                     </div>
                 </div>
                 <a href="#"> <img src="images/UXUIiconimage.jpg" alt="Mock UI image"></a>
