--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">My Work</a></li>
+                    <li><a href="#">Work</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
