--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <p class="subtitle">Featured Project</p>
                   <a href="#" class="featured-title" >Kit Builder ReDesign</a>
                
-                  <p class="featured-desc" >Kit Builder web and print re-design and launch<br> Kit Builder is a SaaS platform specialising in advanced 3D customisation. Updating brand identity and creating a new website.</p>
+                  <p class="featured-desc" >Kit Builder web and print re-design and launch.<br> Kit Builder is a SaaS platform specialising in advanced 3D customisation. Updating brand identity and creating a new website.</p>
                 </div>
             </div>
             <img class="right transition2" src="images/essential-kb-laptop.png" alt="featured project">
