--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <h1 class="stagger1">Crafted Web & Print Design</h1>
             <div class="meet stagger1">
                 <span>&darr;</span>
-                <p>Meet Emma Nia</p>
+                <p>contact Emma Nia</p>
 
             </div>
             <svg class="scroll stagger1" width="51" height="90" viewBox="0 0 51 90" fill="none" xmlns="http://www.w3.org/2000/svg">
