--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="#">Work</a></li>
                     <li><a href="#">Skills</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -86,7 +86,7 @@
                         <div class="icon-container two">
                             <img src="images/coding-icon.svg" alt="Front-end Icon" >
                         </div>
-                        <p class="skill-title">Front-End Dev</p>
+                        <p class="skill-title">Front-End Development</p>
                         <p class="featured-desc skill-desc">My knowledge of HTML & CSS allows me to communicate visions and ideas easily across teams</p>
                     </li>
                     <li class="transition2">
